--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "connectkit": "^1.6.0",
     "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.16",
+    "gsap": "^3.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13"
   },
