--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "connectkit": "^1.6.0",
     "dotenv": "^16.3.1",
+    "ethers": "^6.10.0",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.4",
     "react": "^18.2.0",
