--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "connectkit": "^1.6.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.10.0",
